Bug fix, Delete button was covered by canvas.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -260,6 +260,7 @@ div[data-theme] {
 
 .settings {
     float: right;
+    position: relative;
     width: 360px;
 }
 .settings > * {
